# NoiseInNetworks

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks_general_analysis/global_properties/: fiedler_value.py  giant_connected_component.py
notebooks_general_analysis/models/: generate_null_models.py  properties_baseline_networks.py  sbm_model_with_graphtool_env.py
notebooks_general_analysis/perturbed_networks/: Untitled.ipynb
notebooks_general_analysis/perturbed_networks/.ipynb_checkpoints/: generating_perturbed_networks-checkpoint.py
slurm_scripts/global_properties/: submit_all_fiedler_value_slurm_jobs.py
src/NoiseEffect/: __init__.py  analysis.py  baseline.py  individual_run_setup.py  recovery.py  worker.py
src/NoiseEffect/BenchmarkAlgorithms/: __init__.py  benchmark.py  detection_algorithms.py  leiden_benchmark.py  utils.py  visualize.py
src/NoiseEffect/CommunityDetection/: __init__.py  benchmark_baseline_stability.py  compare_perturbed_to_baseline.py  compare_perturbed_with_baseline_by_claude_idk_if_good.py  detection_algorithms.py  utils.py
src/NoiseEffect/CompareModules/: __init__.py  jaccard.py  main.py  module_analyzer.py  remove_seeds.py
src/NoiseEffect/GlobalProperties/: __init__.py  calculate_gcc_singletons.py  fiedler_value.py
src/NoiseEffect/ModuleRecovery/: __init__.py  compare_results.py  main.py  module_result.py  start_algorithm.py  (+3 more)
src/Package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_baseline.py  test_individual_run_setup.py
tests/NoisePipeline/: test_baseline.py  test_individual_run_setup.py
(+43 files in other folders)
