[project]
name = "NoiseEffect"
version = "0.1.0"
description = "Analysis of robustness of networks."
authors = [
    {name = "Marlene"}
]
readme = "README.md"
requires-python = ">=3.12,<4"

dependencies = [
    "infomap>=2.8.0",
    "leidenalg>=0.10.2",
    "matplotlib>=3.10.0",
    "networkx>=3.5",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.2",
    "igraph>=0.11.0",
    "tqdm>=4.67.3,<5.0.0",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "ipython >=9.0.0",
    "jupyterlab >=4.0.0",
    "notebook >=7.0.0",
    "pytest >=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
